--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Le paysan chinois" />
+    <meta
+      name="description"
+      content="Histoire d'un fermier chinois sur le bien et le mal"
+    />
     <meta name="author" content="Amaury Henrottay" />
     <meta
       name="keywords"
@@ -42,7 +45,8 @@
     </ul>
     <img
       src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg"
-      alt="détails de l'image"
+      alt="Homme de dos qui arrose avec un tuyau un couloir sombre"
+      title="Homme de dos qui arrose avec un tuyau un couloir sombre"
     />
     <p>
       Du point de vue de ce rocher sur Mars, rien ne se soucie de vos problèmes.
@@ -71,7 +75,8 @@
     <figure>
       <img
         src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg"
-        alt="détails de l'image"
+        alt="élément flou entouré sur un sol terreux"
+        title="élément flou entouré sur un sol terreux"
       />
       <caption>
         qu'en pense-t-il?
@@ -105,7 +110,8 @@
     <figure>
       <img
         src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg "
-        alt=""
+        alt="Un vieux fermier chinois assis par terre dans un habitat en bois"
+        title="Un vieux fermier chinois assis par terre dans un habitat en bois"
       />
       <caption>
         Le vieux fermier chinois
@@ -219,6 +225,8 @@
         largement adapté de cet article:
 
         <a
+          target="_blank"
+          title="https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263"
           href="https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263"
           >https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263</a
         >
