--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       name="keywords"
       content="paysan, chinois, fermier, Alexandre, Gorius, becode, bien , mal, chevaux"
     />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Le paysan chinois</title>
   </head>
   <body>
     <header>
@@ -45,8 +46,8 @@
     </ul>
     <img
       src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg"
-      alt="Homme de dos qui arrose avec un tuyau un couloir sombre"
-      title="Homme de dos qui arrose avec un tuyau un couloir sombre"
+      alt="Homme de dos qui arrose  un couloir sombre avec un tuyau d'eau"
+      title="Homme de dos qui arrose  un couloir sombre avec un tuyau d'eau"
     />
     <p>
       Du point de vue de ce rocher sur Mars, rien ne se soucie de vos problèmes.
@@ -230,6 +231,26 @@
           href="https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263"
           >https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263</a
         >
+      </p>
+    </footer>
+    <footer>
+      <p>
+        Exercice becode sur la sémantique en html :
+        <a
+          target="_blank"
+          title="https://github.com/becodeorg/LIE-Jepsen-2.14/blob/master/01-the-field/html-css/progressive-enhancement/readme.md"
+          href="https://github.com/becodeorg/LIE-Jepsen-2.14/blob/master/01-the-field/html-css/progressive-enhancement/readme.md"
+          >Progressive enhancement</a
+        >
+      </p>
+      <p>
+        Ma page github :
+        <a
+          target="_blank"
+          title="https://amauryh24.github.io/"
+          href="https://amauryh24.github.io/"
+          >About me
+        </a>
       </p>
     </footer>
   </body>
