--- a/index.html
+++ b/index.html
@@ -123,54 +123,69 @@
       s’enfuit. Les villageois s’ameutent à la maison du fermier pour lui
       remonter le moral.
     </p>
-    <blockquote>
+    <blockquote class="villageois">
       <p>
         “Quelle malchance ! Ton seul cheval ! Nous sommes vraiment désolé pour
         cette perte, c’est si triste !”
       </p>
     </blockquote>
+    <blockquote class="fermier">
+      <header>
+        Le fermier répond,
+      </header>
+      <p>
+        “Est-ce un <span class="bien">bien</span>? Est-ce un
+        <span class="mal">mal</span>? Je ne sais pas.”.
+      </p>
+    </blockquote>
 
-    <p>
-      Le fermier répond, “Est-ce un <span class="bien">bien</span>? Est-ce un
-      <span class="mal">mal</span>? Je ne sais pas.”.
-    </p>
     <p>
       Le jour suivant, le cheval revient avec sept magnifiques juments. Les
       villageois reviennent pour célébrer la bonne nouvelle.
     </p>
-    <blockquote>
+    <blockquote class="villageois">
       <p>
         “Quelle chance incroyable ! Avec huit chevaux, tu es un homme riche ! Tu
         dois être ravis de cette nouvelle !”
       </p>
     </blockquote>
 
-    <p>
-      Le fermier répond, “Est-ce un <span class="bien">bien</span>? Est-ce un
-      <span class="mal">mal</span>? Je ne sais pas.”.
-    </p>
+    <blockquote class="fermier">
+      <header>
+        Le fermier répond,
+      </header>
+      <p>
+        “Est-ce un <span class="bien">bien</span>? Est-ce un
+        <span class="mal">mal</span>? Je ne sais pas.”.
+      </p>
+    </blockquote>
     <p>
       Le jour d’après, le fils du fermier s’occupe de l’entraînement des
       nouveaux chevaux. Mais l’un d’entre eux s’est révélé agressif; le garçon
       tombe et se casse la jambe. Les villageois reviennent.
     </p>
-    <blockquote>
+    <blockquote class="villageois">
       <p>
         “Pauvre enfant ! Nous sommes si désolé pour ce qui est arrivé ! Nous
         espérons qu’il s’en remettra bientôt, c’est tellement dommage…”
       </p>
     </blockquote>
 
-    <p>
-      Le fermier répond, “Est-ce un <span class="bien">bien</span>? Est-ce un
-      <span class="mal">mal</span>? Je ne sais pas.”.
-    </p>
+    <blockquote class="fermier">
+      <header>
+        Le fermier répond,
+      </header>
+      <p>
+        “Est-ce un <span class="bien">bien</span>? Est-ce un
+        <span class="mal">mal</span>? Je ne sais pas.”.
+      </p>
+    </blockquote>
     <p>
       Le quatrième jour, l’armée arrive au village à la recherche de nouvelles
       jeunes recrues. Grâce à sa jambe cassée, le fils du fermier échappe au
       recrutement.
     </p>
-    <blockquote>
+    <blockquote class="villageois">
       <p>
         “Quelle nouvelle incroyable ! Ton fils échappera à cette guerre
         sanglante, il vivra, à tes côtés ! Tu dois être tellement heureux, c’est
@@ -178,11 +193,16 @@
       </p>
     </blockquote>
 
-    <p>
-      Quand <span class="bien">bien</span> même, le fermier répond, “Est-ce un
-      <span class="bien">bien</span>? Est-ce un <span class="mal">mal</span>? Je
-      ne sais pas.”.
-    </p>
+    <blockquote class="fermier">
+      <header>
+        Quand <span class="bien">bien</span> même, le fermier répond,
+      </header>
+      <p>
+        “Est-ce un <span class="bien">bien</span>? Est-ce un
+        <span class="mal">mal</span>? Je ne sais pas.”.
+      </p>
+    </blockquote>
+
     <hr />
     <p>En résumé, représentons ce dialogue sous forme de tableau</p>
 
