prepa assets & style selector 2

--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
         Tableau représentant la philosophie du fermier.
       </caption>
       <tr>
-        <td>Evénement</td>
-        <td>
+        <th>Evénement</th>
+        <th>
           <span class="bien">bien</span> ou <span class="mal">mal</span> ?
-        </td>
+        </th>
       </tr>
       <tr>
         <td>Perdre son cheval</td>
