--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       name="keywords"
       content="paysan, chinois, fermier, Alexandre, Gorius, becode, bien , mal, chevaux"
     />
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Le paysan chinois</title>
   </head>
@@ -33,7 +34,7 @@
       </blockquote>
     </header>
 
-    <p>Dans la vie, il y a 4 types de personnes.</p>
+    <h2>Dans la vie, il y a 4 types de personnes.</h2>
     <ul>
       <li>
         les gens qui pensent qu'Internet c'est <span class="bien">bien</span>,
@@ -45,16 +46,17 @@
       <li>les gens qui n'y pensent pas.</li>
     </ul>
     <img
+      id="img-eau"
       src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg"
       alt="Homme de dos qui arrose  un couloir sombre avec un tuyau d'eau"
       title="Homme de dos qui arrose  un couloir sombre avec un tuyau d'eau"
     />
-    <p>
+    <p id="firstp" class="sec1">
       Du point de vue de ce rocher sur Mars, rien ne se soucie de vos problèmes.
       Là haut, ça n’a pas d’importance, il n'y a aucun "problème", tout est
       comme cela doit être.
     </p>
-    <p>
+    <p class="sec1">
       Ici bas, la seule réalité qui soit est celle de notre conscience. Rien
       n’existe si la conscience ne le pense pas. Rien n’existe non plus si nos
       sens ne transmettent pas le message. Cela signifie que si nous sentons
@@ -65,7 +67,7 @@
       réalité change aussi en fonction de la manière. Ainsi, si nous pouvons
       autant changer notre réalité, alors rien n’est tangible.
     </p>
-    <p>
+    <p class="sec1">
       Il y a des preuves à cela. Tombez amoureux de quelqu’un et vous aurez une
       vision quasi divine de cette personne. Sortez de son emprise, cette
       personne se révèle différente. Pourtant elle n’a pas changé, seulement
