--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       n’est pas seulement que vous pouvez activement façonner votre monde de
       cette manière, c’est que vous le faites passivement, quoi qu’il arrive.
     </p>
-    <figure>
+    <figure id="rocher">
       <img
         src="http://static2.businessinsider.com/image/52fe8230eab8ea4275063b89/nasa-has-determined-where-the-mysterious-jelly-doughnut-rock-on-mars-came-from.jpg"
         alt="élément flou entouré sur un sol terreux"
@@ -243,19 +243,18 @@
       bon pour la banane. N'en faisons donc pas un fromage...
     </p>
     <footer>
+      <p>Copyright Just Another Company 2017.</p>
+      <p>Tous droits réservés.</p>
       <p>
-        Copyright Just Another Company 2017. Tous droits réservés. Très
-        largement adapté de cet article:
-
+        Très largement adapté de cet article:
         <a
           target="_blank"
           title="https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263"
           href="https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263"
-          >https://medium.com/scribe/il-ny-a-rien-de-bien-ni-de-mal-3d46a2d2e263</a
+          >medium.com</a
         >
       </p>
-    </footer>
-    <footer>
+
       <p>
         Exercice becode sur la sémantique en html :
         <a
