--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,9 +23,9 @@
         <span class="mal">mal</span>? Je ne sais pas.
       </h1>
       <blockquote>
-        <header>
+        <cite>
           11 mai 2016, Alexandre Gorius
-        </header>
+        </cite>
         <p>
           Dans la nature, <span class="bien">bien</span> &
           <span class="mal">mal</span> n’existent pas. L'Univers lui-même n'est
@@ -81,9 +81,9 @@
         alt="élément flou entouré sur un sol terreux"
         title="élément flou entouré sur un sol terreux"
       />
-      <caption>
+      <figcaption>
         qu'en pense-t-il?
-      </caption>
+      </figcaption>
     </figure>
     <blockquote>
       <p>
@@ -116,9 +116,9 @@
         alt="Un vieux fermier chinois assis par terre dans un habitat en bois"
         title="Un vieux fermier chinois assis par terre dans un habitat en bois"
       />
-      <caption>
+      <figcaption>
         Le vieux fermier chinois
-      </caption>
+      </figcaption>
     </figure>
     <p>
       C’est l’histoire d’un fermier qui possède un cheval. Un jour, le cheval
@@ -132,9 +132,9 @@
       </p>
     </blockquote>
     <blockquote class="fermier">
-      <header>
+      <cite>
         Le fermier répond,
-      </header>
+      </cite>
       <p>
         “Est-ce un <span class="bien">bien</span>? Est-ce un
         <span class="mal">mal</span>? Je ne sais pas.”.
@@ -153,9 +153,9 @@
     </blockquote>
 
     <blockquote class="fermier">
-      <header>
+      <cite>
         Le fermier répond,
-      </header>
+      </cite>
       <p>
         “Est-ce un <span class="bien">bien</span>? Est-ce un
         <span class="mal">mal</span>? Je ne sais pas.”.
@@ -174,9 +174,9 @@
     </blockquote>
 
     <blockquote class="fermier">
-      <header>
+      <cite>
         Le fermier répond,
-      </header>
+      </cite>
       <p>
         “Est-ce un <span class="bien">bien</span>? Est-ce un
         <span class="mal">mal</span>? Je ne sais pas.”.
@@ -196,9 +196,9 @@
     </blockquote>
 
     <blockquote class="fermier">
-      <header>
+      <cite>
         Quand <span class="bien">bien</span> même, le fermier répond,
-      </header>
+      </cite>
       <p>
         “Est-ce un <span class="bien">bien</span>? Est-ce un
         <span class="mal">mal</span>? Je ne sais pas.”.
