--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
         lui, ni l’un ni l’autre n’existent.
       </p>
     </blockquote>
-
     <p>
       Tout est relatif à un point de vue. Ainsi, il n’existe pas de
       <span class="bien">bien</span> ni de <span class="mal">mal</span>, car
@@ -273,6 +272,12 @@
           >About me
         </a>
       </p>
+    </footer>
+    <footer>
+      <ul>
+        <li><a href="/html/bonus1.html">Bonus 1</a></li>
+        <li><a href=""></a></li>
+      </ul>
     </footer>
   </body>
 </html>
