--- a/html/bonus1.html
+++ b/html/bonus1.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Amaury Henrottay" />
+    <meta
+      name="description"
+      content="Article sur 8 façons simples d’améliorer la typographie dans vos designs en css"
+    />
+    <meta
+      name="keywords"
+      content="typographie, design, veuve, orphelin, drapeau, justification, ponctuation , Antonio, Carusone"
+    />
     <title>8 façons simples d’améliorer la typographie dans vos designs</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="css/bonus1.css" />
