--- a/html/bonus1.html
+++ b/html/bonus1.html
@@ -21,45 +21,47 @@
       8 façons simples d’améliorer la typographie dans vos designs
       <span>
         Par
-        <a href="http://www.aisleone.net/about/" hreflang="en" target="_blank"
+        <a href="http://www.antoniocarusone.com/" hreflang="en" target="_blank"
           >Antonio Carusone</a
         ></span
       >
     </h1>
     <article>
+      <h2>semantic hidden</h2>
       <section>
+        <h3>semantic hidden</h3>
         <p>
-          Cet article a été écrit pour publication dans Smashing Magazine le 3
+         <span id="maj">C</span>et article a été écrit pour publication dans Smashing Magazine le 3
           avril 2009. Je le reproduis ici pour vous être agréable.
         </p>
 
         <p>
-          <span>B</span>eaucoup de gens, y compris les designers, pensent que la
+          Beaucoup de gens, y compris les designers, pensent que la
           typographie consiste à choisir une police, sa taille et si elle doit
-          être grasse ou pas. Pour la plupart des gens, ça s 'arrête là. Obtenir
-          une bonne typographie demande tellement plus, notamment de s 'attarder
+          être grasse ou pas. Pour la plupart des gens, ça s&#8239'arrête là. Obtenir
+          une bonne typographie demande tellement plus, notamment de s&#8239'attarder
           sur les détails que les designers négligent souvent.
         </p>
         <p>
           Ces détails donnent au designer le contrôle total, leur permettant d
-          'apporter une typographie belle et cohérente à leurs designs. Bien que
+         &#8239'apporter une typographie belle et cohérente à leurs designs. Bien que
           ces subtilités puissent être appliquées à différents types de médias,
           dans cet article nous nous concentrerons sur leur application au
-          design web à travers l 'utilisation des CSS.
+          design web à travers l&#8239'utilisation des CSS.
         </p>
         <p>
-          Voici donc 8 façons simples d 'améliorer la typographie, et donc l
-          'ergonomie, de vos designs.
+          Voici donc 8 façons simples d&#8239'améliorer la typographie, et donc l
+         &#8239'ergonomie, de vos designs.
         </p>
       </section>
       <section>
-        <h2>Justification</h2>
+        <h3>Justification</h3>
         <p>
-          La justification est la longueur d 'une ligne de texte. Pour l 'œil d
-          'un lecteur, des lignes trop longues ou trop courtes peuvent être
+          La justification est la longueur d&#8239'une ligne de texte. Pour l&#8239'œil d
+         &#8239'un lecteur, des lignes trop longues ou trop courtes peuvent être
           fatigantes et gênantes. Une justification longue perturbe le rythme de
           lecture car le lecteur a du mal à localiser la prochaine ligne de
-          texte. Une justification étroite n 'est acceptable que pour de petites
+          texte. Une justification étroite n&#8239'est acceptable que pour de petites
           quantités de texte. Pour une lisibilité optimale, vous devriez avoir
           une justification de 40 à 80 caractères, espaces inclus. Pour un
           design à une seule colonne, une justification de 65 caractères est
@@ -71,7 +73,7 @@
           title="Exemple d'une justification correcte"
         />
         <p>
-          Une manière simple pour calculer la justification est d 'utiliser la
+          Une manière simple pour calculer la justification est d&#8239'utiliser la
           méthode de Robert Bringhurst, qui multiplie la taille de la police par
           30. Si la taille de la police est de 10px, la multiplier par 30 vous
           donne une justification de 300px ou environ 65 caractères par ligne.
@@ -86,19 +88,19 @@
         >
       </section>
       <section>
-        <h2>Interlignage</h2>
+        <h3>Interlignage</h3>
         <p>
-          L 'interlignage est l 'espace entre les lignes du corps de texte qui
+          L&#8239'interlignage est l&#8239'espace entre les lignes du corps de texte qui
           joue un rôle important dans sa lisibilité. Des lignes correctement
           espacées permettent au lecteur de mieux cerner la fonte et améliorent
-          l 'apparence globale du texte. L 'interlignage altère aussi la couleur
-          typographique, qui est la densité ou la tonalité d 'une composition.
+          l&#8239'apparence globale du texte. L&#8239'interlignage altère aussi la couleur
+          typographique, qui est la densité ou la tonalité d&#8239'une composition.
         </p>
         <p>
-          Plusieurs facteurs impactent l 'interlignage: police, taille, graisse,
+          Plusieurs facteurs impactent l&#8239'interlignage: police, taille, graisse,
           casse, justification, intermot de la fonte, etc. Plus la justification
-          est longue, plus l 'interlignage devient nécessaire. À l 'inverse,
-          plus la taille de la fonte augmente, plus l 'interlignage peut être
+          est longue, plus l&#8239'interlignage devient nécessaire. À l&#8239'inverse,
+          plus la taille de la fonte augmente, plus l&#8239'interlignage peut être
           réduit. Une bonne règle est de déterminer un interlignage de 2 à 5
           points plus grand que la taille de la fonte, selon la police. Si vous
           avez une fonte de 12pt, un interlignage de 15 à 16pt devrait bien
@@ -122,12 +124,12 @@
         </pre>
       </section>
       <section>
-        <h2>Ponctuation flottante</h2>
+        <h3>Ponctuation flottante</h3>
         <p>
           Placez les guillemets dans la marge du corps de texte. En ignorant
           cela, un guillemet aligné avec le texte interrompra la marge gauche et
-          perturbera le rythme du lecteur. Placer les guillemets à l 'extérieur
-          permet de conserver l 'alignement à gauche intact et équilibré,
+          perturbera le rythme du lecteur. Placer les guillemets à l&#8239'extérieur
+          permet de conserver l&#8239'alignement à gauche intact et équilibré,
           améliorant ainsi la lisibilité.
         </p>
         <img
@@ -137,7 +139,7 @@
         />
         <p>
           Ce résultat est obtenu très facilement avec CSS en utilisant l
-          'élément blockquote:
+         &#8239'élément blockquote:
         </p>
         <pre>
             blockquote {
@@ -147,20 +149,20 @@
             </pre
         >
         <p>
-          L 'indentation négative dépendra de la police, de la taille de la
+          L&#8239'indentation négative dépendra de la police, de la taille de la
           fonte et des marges utilisées.
         </p>
       </section>
       <section>
-        <h2>Rythme vertical</h2>
+        <h3>Rythme vertical</h3>
         <p>
           Une grille de référence est fondamentale pour obtenir un rythme
           typographique cohérent sur une page. Elle permet au lecteur de suivre
           facilement le flux du texte, ce qui par la même augmente la
           lisibilité. Un rythme continu dans la dimension verticale maintient
           tout le texte sur une grille cohérente, afin que la proportion et l
-          'équilibre soient conservés dans toute la page, quels que soient la
-          taille de la fonte, l 'interlignage ou la justification.
+         &#8239'équilibre soient conservés dans toute la page, quels que soient la
+          taille de la fonte, l&#8239'interlignage ou la justification.
         </p>
         <img
           src="http://www.pompage.net/IMG/jpg/rythme-vertical.jpg"
@@ -168,11 +170,11 @@
           title="Exemple d'un rythme vertical correcte"
         />
         <p>
-          Pour conserver un rythme vertical en CSS il faut que l 'espacement
-          entre les éléments et l 'interlignage soient égaux à la taille de la
+          Pour conserver un rythme vertical en CSS il faut que l&#8239'espacement
+          entre les éléments et l&#8239'interlignage soient égaux à la taille de la
           grille de référence. Par exemple, disons que vous utilisez une grille
-          de référence de 15px, ce qui signifie qu 'il y a 15px entre chaque
-          ligne de base. L 'interlignage serait de 15px et l 'espace entre
+          de référence de 15px, ce qui signifie qu&#8239'il y a 15px entre chaque
+          ligne de base. L&#8239'interlignage serait de 15px et l&#8239'espace entre
           chaque paragraphe serait également de 15px. Voici un exemple:
         </p>
         <pre>
@@ -186,20 +188,20 @@
               }
         </pre>
         <p>
-          Cela permet à chaque paragraphe de s 'aligner sur la grille et ainsi
+          Cela permet à chaque paragraphe de s&#8239'aligner sur la grille et ainsi
           de conserver le rythme vertical du texte.
         </p>
       </section>
       <section>
-        <h2>Veuves et Orphelines</h2>
+        <h3>Veuves et Orphelines</h3>
         <p>
-          Une veuve est une ligne courte ou un mot unique à la fin d 'un
+          Une veuve est une ligne courte ou un mot unique à la fin d&#8239'un
           paragraphe. Un orphelin est un mot ou une ligne courte au début ou à
-          la fin d 'une colonne séparée du reste du paragraphe. Les veuves et
-          les orphelines créent des drapeaux inélégants, interrompent l 'œil du
+          la fin d&#8239'une colonne séparée du reste du paragraphe. Les veuves et
+          les orphelines créent des drapeaux inélégants, interrompent l&#8239'œil du
           lecteur et affectent la lisibilité. Ils peuvent être évités en
-          ajustant la taille de la fonte, l 'interlignage, la justification, l
-          'intermots, l 'interlettrage ou en entrant manuellement des sauts de
+          ajustant la taille de la fonte, l&#8239'interlignage, la justification, l
+         &#8239'intermots, l&#8239'interlettrage ou en entrant manuellement des sauts de
           ligne.
         </p>
         <img
@@ -208,7 +210,7 @@
           title="Exemple d'une veuve ou orphelin correcte"
         />
         <p>
-          Malheureusement, il n 'existe pas de moyen facile pour empêcher les
+          Malheureusement, il n&#8239'existe pas de moyen facile pour empêcher les
           veuves et orphelines typographiques avec CSS. Une façon de les
           supprimer a été mentionnée précédemment, mais il existe également un
           plugin jQuery nommé
@@ -219,7 +221,7 @@
             target="_blank"
             >jQWidon't</a
           >
-          qui place un espace insécable entre les deux derniers mots d 'un
+          qui place un espace insécable entre les deux derniers mots d&#8239'un
           élément.
         </p>
         <p>
@@ -228,16 +230,16 @@
         </p>
       </section>
       <section>
-        <h2>Emphase</h2>
+        <h3>Emphase</h3>
         <p>
-          Mettre l 'emphase sur un mot sans interrompre le lecteur est
-          important. L 'italique est généralement considéré comme étant la forme
-          idéale d 'emphase. D 'autres formes d 'emphase communes sont : gras,
+          Mettre l&#8239'emphase sur un mot sans interrompre le lecteur est
+          important. L&#8239'italique est généralement considéré comme étant la forme
+          idéale d&#8239'emphase. D&#8239'autres formes d&#8239'emphase communes sont : gras,
           les capitales, les petites capitales, la taille de la fonte, la
           couleur, le soulignement ou une police de caractères différente.
-          Essayez de vous limiter à une emphase unique, quelle qu 'elle soit.
+          Essayez de vous limiter à une emphase unique, quelle qu&#8239'elle soit.
           Les combinaisons comme capitales-gras-italique sont perturbantes et
-          ont l 'air gauche.
+          ont l&#8239'air gauche.
         </p>
         <img
           src="http://www.pompage.net/IMG/jpg/emphase.jpg"
@@ -260,18 +262,18 @@
               }
         </pre>
         <p>
-          Gardez à l 'esprit que le style font-variant ne fonctionne que si la
+          Gardez à l&#8239'esprit que le style font-variant ne fonctionne que si la
           police choisie supporte la variante small-caps (petites capitales).
         </p>
       </section>
       <section>
-        <h2>Échelle</h2>
+        <h3>Échelle</h3>
         <p>
-          Composez toujours à partir d 'une échelle, que ce soit l 'échelle
+          Composez toujours à partir d&#8239'une échelle, que ce soit l&#8239'échelle
           traditionnelle développée au 16ème siècle de laquelle nous sommes tous
           familiers, ou une que vous créez vous-même. Une échelle est importante
-          parce qu 'elle établit une hiérarchie typographique qui améliore la
-          lisibilité et crée une harmonie et cohérence à l 'intérieur du texte.[
+          parce qu&#8239'elle établit une hiérarchie typographique qui améliore la
+          lisibilité et crée une harmonie et cohérence à l&#8239'intérieur du texte.[
           image :http://www.pompage.net/IMG/jpg/echelle.jpg]
         </p>
         <img
@@ -279,7 +281,7 @@
           alt="Exemple d'Échelle correcte"
           title="Exemple d'Échelle correcte"
         />
-        <p>Voici un exemple d 'échelle typographique définie en CSS:</p>
+        <p>Voici un exemple d&#8239'échelle typographique définie en CSS:</p>
         <pre>
             h1 {
                 font-size: 48px;
@@ -305,14 +307,14 @@
         </pre>
       </section>
       <section>
-        <h2>De beaux drapeaux</h2>
+        <h3>De beaux drapeaux</h3>
         <p>
           Lorsque vous ferrez un bloc de texte, à gauche ou à droite, un texte
           non justifié, soyez sûr de maintenir le drapeau (le côté inégal)
           équilibré sans aucuns «trous» inattendus ou formes bizarres. Un
-          mauvais drapeau peut être déstabilisant pour l 'œil et distraire le
+          mauvais drapeau peut être déstabilisant pour l&#8239'œil et distraire le
           lecteur. Un bon drapeau est plus «doux», sans lignes trop longues ou
-          trop courtes. Il n 'existe aucun moyen de contrôler cela en CSS, donc
+          trop courtes. Il n&#8239'existe aucun moyen de contrôler cela en CSS, donc
           pour obtenir un bon drapeau vous devez faire des ajustements manuels
           sur le bloc de texte.
         </p>
@@ -323,15 +325,15 @@
         />
         <p>
           La césure peut aussi aider à faire des drapeaux propres, mais
-          malheureusement les CSS ne peuvent pas le gérer pour l 'instant.
+          malheureusement les CSS ne peuvent pas le gérer pour l&#8239'instant.
           Peut-être dans un avenir proche, allons-nous avoir
           <a
-            href="http://www.w3.org/TR/&lt;abbr&gt;CSS&lt;/abbr&gt;3-text/#hyphenate"
+            href="http://www.w3.org/TR/abbrCSS/abbr3-text/#hyphenate"
             hreflang="en"
             lang="en"
             target="_blank"
             >une certaine mesure de contrôle avec CSS 3</a
-          >. Tout n 'est pas perdu cela dit. Il existe quelques solutions
+          >. Tout n&#8239'est pas perdu cela dit. Il existe quelques solutions
           serveur et côté client pour une césure automatique comme
           <a
             href="http://yellowgreen.de/phpHyphenator"
@@ -359,9 +361,9 @@
         </p>
       </section>
       <section>
-        <h2>Ressources supplémentaires</h2>
+        <h3>Ressources supplémentaires</h3>
         <p>
-          Voici une liste d 'articles et livres sur le même thème pour vous
+          Voici une liste d&#8239'articles et livres sur le même thème pour vous
           aider avec les détails:
         </p>
         <ul>
@@ -463,13 +465,16 @@
     </article>
 
     <hr />
-    <p>
-      source:
-      <a
-        href="http://www.pompage.net/traduction/8-facons-simples-d-ameliorer-la-typographie-dans-vos"
-        target="_blank"
-        >pompage.net</a
-      >
-    </p>
+    <footer>
+        <p>
+            source:
+            <a
+              href="http://www.pompage.net/traduction/8-facons-simples-d-ameliorer-la-typographie-dans-vos"
+              target="_blank"
+              >pompage.net</a
+            >
+          </p>
+    </footer>
+   
   </body>
 </html>
