--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     </footer>
     <footer>
       <ul>
-        <li><a href="/html/bonus1.html">Bonus 1</a></li>
+        <li><a href="./html/bonus1.html">Bonus 1</a></li>
         <li><a href=""></a></li>
       </ul>
     </footer>
