--- a/index.html
+++ b/index.html
@@ -276,7 +276,10 @@
     <footer>
       <ul>
         <li>
-          <a href="../Progressive-Enhancement/html/bonus1.html">Bonus 1</a>
+          <a
+            href="https://amauryh24.github.io/Progressive-Enhancement/html/bonus1.html"
+            >Bonus 1</a
+          >
         </li>
         <li><a href=""></a></li>
       </ul>
