--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
       <h2>Dans la vie, il y a 4 types de personnes.</h2>
       <ul>
         <li>
-          les gens qui pensent qu'Internet c'est <span class="bien">bien</span>,
+          les gens qui pensent qu'Internet c'est <span class="bien">bien</span>
         </li>
         <li>
           les gens qui pensent qu'Internet c'est le
-          <span class="mal">mal</span>,
+          <span class="mal">mal</span>
         </li>
-        <li>les gens qui pensent qu'Internet ce sont des chats,</li>
-        <li>les gens qui n'y pensent pas.</li>
+        <li>les gens qui pensent qu'Internet ce sont des chats</li>
+        <li>les gens qui n'y pensent pas</li>
       </ul>
       <img
         id="img-eau"
@@ -52,7 +52,7 @@
         alt="Homme de dos qui arrose  un couloir sombre avec un tuyau d'eau"
         title="Homme de dos qui arrose  un couloir sombre avec un tuyau d'eau"
       />
-      <p id="firstp" class="sec1">
+      <p class="sec1">
         Du point de vue de ce rocher sur Mars, rien ne se soucie de vos
         problèmes. Là haut, ça n’a pas d’importance, il n'y a aucun "problème",
         tout est comme cela doit être.
