--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
           pour lui, ni l’un ni l’autre n’existent“.
         </p>
       </blockquote>
+
       <p>
         Tout est relatif à un point de vue. Ainsi, il n’existe pas de
         <span class="bien">bien</span> ni de <span class="mal">mal</span>, car
@@ -110,7 +111,7 @@
       </h2>
       <p>Une histoire chinoise célèbre illustre parfaitement ce propos.</p>
 
-      <figure>
+      <figure id="fermier">
         <img
           src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg "
           alt="Un vieux fermier chinois assis par terre dans un habitat en bois"
@@ -238,9 +239,10 @@
 
       <h3>Conclusion</h3>
       <p>
-        Le <span class="bien">bien</span> et le Mal sont des valeurs culturelles
-        et non naturelles. La banane est bonne pour le singe, le singe n'est pas
-        bon pour la banane. N'en faisons donc pas un fromage...
+        Le <span class="bien">bien</span> et le
+        <span class="mal">mal</span> sont des valeurs culturelles et non
+        naturelles. La banane est bonne pour le singe, le singe n'est pas bon
+        pour la banane. N'en faisons donc pas un fromage...
       </p>
     </article>
 
@@ -256,36 +258,30 @@
           >medium.com</a
         >
       </p>
-
-      <p>
-        Exercice becode sur la sémantique en html :
-        <a
-          target="_blank"
-          title="https://github.com/becodeorg/LIE-Jepsen-2.14/blob/master/01-the-field/html-css/progressive-enhancement/readme.md"
-          href="https://github.com/becodeorg/LIE-Jepsen-2.14/blob/master/01-the-field/html-css/progressive-enhancement/readme.md"
-          >Progressive enhancement</a
-        >
-      </p>
-      <p>
-        Ma page github :
-        <a
-          target="_blank"
-          title="https://amauryh24.github.io/"
-          href="https://amauryh24.github.io/"
-          >About me
-        </a>
-      </p>
-    </footer>
-    <footer>
       <ul>
         <li>
           <a
             target="_blank"
+            title="https://amauryh24.github.io/Progressive-Enhancement/html/bonus1.html"
             href="https://amauryh24.github.io/Progressive-Enhancement/html/bonus1.html"
-            >Bonus 1</a
+          >
+            8 façons simples d’améliorer la typographie dans vos designs</a
           >
         </li>
-        <li><a href=""></a></li>
+        <li>
+          <a target="_blank" title="#" href="#">
+            Petit Guide de typographie
+          </a>
+        </li>
+        <li>
+          <a
+            target="_blank"
+            title="https://amauryh24.github.io/"
+            href="https://amauryh24.github.io/"
+          >
+            Page github
+          </a>
+        </li>
       </ul>
     </footer>
   </body>
