--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
         <li>
           <a
             target="_blank"
-            title="https://amauryh24.github.io/Progressive-Enhancement/html/bonus1.html"
-            href="https://amauryh24.github.io/Progressive-Enhancement/html/bonus1.html"
+            title="./html/bonus1.html"
+            href="./html/bonus1.html"
           >
             8 façons simples d’améliorer la typographie dans vos designs</a
           >
