semantics "petit guide"

--- a/index.html
+++ b/index.html
@@ -262,14 +262,18 @@
         <li>
           <a
             target="_blank"
-            title="./html/bonus1.html"
+            title="8 façons simples d’améliorer la typographie dans vos designs"
             href="./html/bonus1.html"
           >
             8 façons simples d’améliorer la typographie dans vos designs</a
           >
         </li>
         <li>
-          <a target="_blank" title="#" href="#">
+          <a
+            target="_blank"
+            title="Petit Guide de typographie"
+            href="./html/bonus2.html"
+          >
             Petit Guide de typographie
           </a>
         </li>
