font & basic style

--- a/html/bonus2.html
+++ b/html/bonus2.html
@@ -44,7 +44,8 @@
     <article>
       <h2>Quelques notions de base</h2>
       <img
-        src="http://coreight.com/sites/default/files/typographie.jpg"
+        id="img01"
+        src="../img/typographie.jpg"
         alt="Mélange de lettres"
         title="Mélange de lettres"
       />
@@ -89,9 +90,10 @@
           nous donne les grandes familles suivantes :
         </p>
 
-        <ul>
+        <ul id="polices">
           <li>
             <img
+              id="img02"
               src="http://coreight.com/sites/default/files/times.png"
               alt="Serif, police à empattement"
               title="Serif, police à empattement"
@@ -103,6 +105,7 @@
           </li>
           <li>
             <img
+              id="img03"
               src="http://coreight.com/sites/default/files/helvetica.png"
               alt="Sans-serif, polices sans empattement"
               title="Sans-serif, polices sans empattement"
@@ -114,6 +117,7 @@
           </li>
           <li>
             <img
+              id="img04"
               src=" http://coreight.com/sites/default/files/lucida.png"
               alt="Cursive, polices simulant l'écriture à la main"
               title="Cursive, polices simulant l'écriture à la main"
@@ -125,6 +129,7 @@
           </li>
           <li>
             <img
+              id="img05"
               src="http://coreight.com/sites/default/files/blackletter.png"
               alt="Fantasy, polices plus exotiques"
               title="Fantasy, polices plus exotiques"
@@ -144,6 +149,7 @@
           </li>
           <li>
             <img
+              id="img06"
               src="http://coreight.com/sites/default/files/courier.png"
               alt="Monospace, polices à chasse fixe"
             />
@@ -156,6 +162,7 @@
 
         <p>Une illustration plus parlante :</p>
         <img
+          id="img07"
           src="http://coreight.com/sites/default/files/monospace.png"
           alt="Chasse fixe, largeur utilisée pour chaque caractère"
           title="Chasse fixe et proportionelle, largeur utilisée pour chaque caractère"
@@ -191,6 +198,7 @@
           trouveras ton bonheur avec ça :
         </p>
         <img
+          id="img08"
           src="http://coreight.com/sites/default/files/typo.png"
           alt="Anatomie des lettres"
           title="Anatomie des lettres"
@@ -214,6 +222,7 @@
       <section>
         <h3>La taille des polices</h3>
         <img
+          id="img09"
           src="http://coreight.com/sites/default/files/police-taille.png"
           alt="La taille des polices"
           title="La taille des polices"
@@ -232,6 +241,7 @@
       <section>
         <h3>La graisse</h3>
         <img
+          id="img10"
           src="http://coreight.com/sites/default/files/graisse.png"
           alt="La graisse de police"
           title="La graisse de police"
@@ -254,37 +264,49 @@
       </section>
     </article>
     <article>
-      <h2>Ne pas mélanger trop de polices différentes</h2>
+      <h2>Bien utiliser les polices, quelques conseils</h2>
       <img
-        src="http://coreight.com/sites/default/files/polices-differentes.png"
-        alt="Polices mélangées"
-        title="Polices mélangées"
+        id="img10a"
+        src="http://coreight.com/sites/default/files/polices-dessin.jpg"
+        alt="Une fille qui dessine des polices"
+        title="Une fille qui dessine des polices"
       />
-      <p>
-        C'est un défaut que l'on retrouve très souvent dans les publications
-        amateurs : chaque information sera écrite avec une fonte totalement
-        différente : une police fantasy pour le titre, une police serif en gras
-        pour la date, une police sans-serif en italique pour le lieu... et tout
-        le reste en
-        <a
-          href="http://www.comicsanscriminal.com/"
-          target="_blank"
-          title="Comic Sans MS"
-          >Comic Sans MS</a
-        >
-        bien entendu.
-      </p>
-      <p>
-        Il est souvent plus prudent de limiter le nombre de polices différentes
-        sur un même document. Les variations de taille, de graisse voir de
-        couleur doivent déjà permettre de mettre en valeur les différents
-        éléments.
-      </p>
-      <p>Donc avec 2-3 polices différentes, tu devrais t'en sortir.</p>
+
+      <section>
+        <h3>Ne pas mélanger trop de polices différentes</h3>
+        <img
+          id="img11"
+          src="http://coreight.com/sites/default/files/polices-differentes.png"
+          alt="Polices mélangées"
+          title="Polices mélangées"
+        />
+        <p>
+          C'est un défaut que l'on retrouve très souvent dans les publications
+          amateurs : chaque information sera écrite avec une fonte totalement
+          différente : une police fantasy pour le titre, une police serif en
+          gras pour la date, une police sans-serif en italique pour le lieu...
+          et tout le reste en
+          <a
+            href="http://www.comicsanscriminal.com/"
+            target="_blank"
+            title="Comic Sans MS"
+            >Comic Sans MS</a
+          >
+          bien entendu.
+        </p>
+        <p>
+          Il est souvent plus prudent de limiter le nombre de polices
+          différentes sur un même document. Les variations de taille, de graisse
+          voir de couleur doivent déjà permettre de mettre en valeur les
+          différents éléments.
+        </p>
+        <p>Donc avec 2-3 polices différentes, tu devrais t'en sortir.</p>
+      </section>
 
       <section>
         <h3>Les combinaisons de polices</h3>
         <img
+          id="img12"
           src="http://coreight.com/sites/default/files/polices-combinaison.png"
           alt="Les combinaisons de polices"
           title="Les combinaisons de polices"
@@ -324,6 +346,7 @@
       <section>
         <h3>Modifier les polices ?</h3>
         <img
+          id="img13"
           src="http://coreight.com/sites/default/files/police-modifier.jpg"
           alt="Paramètre de la police"
           title="Paramètre de la police"
@@ -338,6 +361,7 @@
       <section>
         <h3>La mise en forme des paragraphes</h3>
         <img
+          id="img14"
           src="http://coreight.com/sites/default/files/paragraphe.jpg"
           alt="Mise en forme des paragraphes"
           title="mise en forme des paragraphes"
@@ -409,6 +433,7 @@
       <section>
         <h3>Quelle police sur le web ? L'utilité des web fonts</h3>
         <img
+          id="img15"
           src="http://coreight.com/sites/default/files/web-fonts.jpg"
           alt="web-fonts"
           title="web-fonts"
