--- a/html/bonus2.html
+++ b/html/bonus2.html
@@ -42,15 +42,16 @@
       sur le sujet.
     </p>
     <article>
-      <h2>Quelques notions de base</h2>
+      <h2 class="titleh2">Quelques notions de base</h2>
       <img
+        class="imgart"
         id="img01"
         src="../img/typographie.jpg"
         alt="Mélange de lettres"
         title="Mélange de lettres"
       />
 
-      <section>
+      <section class="sec1">
         <h3>Polices et fontes</h3>
         <p>
           On voit souvent les deux termes utilisés indifféremment, alors qu'on
@@ -65,13 +66,13 @@
           graisse et italique pour une police donnée.
         </p>
         <p>Exemples :</p>
-        <ul>
+        <ul class="listeEx">
           <li>Arial est une police</li>
           <li>Arial gras 12 point est une fonte</li>
         </ul>
         <p>C'est aussi simple que ça.</p>
       </section>
-      <section>
+      <section class="sec2">
         <h3>
           Serif ou sans serif ? La classification des polices
         </h3>
@@ -138,7 +139,7 @@
               fantasy : polices plus exotiques, décoratives (ex : Impact,
               Fraktur...)
             </p>
-            <p>
+            <p class="collection">
               (<a
                 href="http://coreight.com/content/polices-celebres-films-cinema-telecharger-gratuitement"
                 target="_blank"
@@ -160,7 +161,7 @@
           </li>
         </ul>
 
-        <p>Une illustration plus parlante :</p>
+        <p id="illustration">Une illustration plus parlante :</p>
         <img
           id="img07"
           src="http://coreight.com/sites/default/files/monospace.png"
@@ -168,7 +169,7 @@
           title="Chasse fixe et proportionelle, largeur utilisée pour chaque caractère"
         />
       </section>
-      <section>
+      <section class="sec3">
         <h3>Quelle famille de police choisir alors ?</h3>
         <p>
           Tout dépendra bien sûr de l'usage que tu vas en faire. Sur des grands
@@ -187,7 +188,7 @@
         </p>
       </section>
 
-      <section>
+      <section class="sec4">
         <h3>La structure des lettres</h3>
         <p>
           Il existe un tas de termes barbares pour désigner toutes les
@@ -219,7 +220,7 @@
           >)
         </p>
       </section>
-      <section>
+      <section class="sec5">
         <h3>La taille des polices</h3>
         <img
           id="img09"
@@ -238,7 +239,7 @@
           forcément la même taille et surtout la même largeur.
         </p>
       </section>
-      <section>
+      <section class="sec6">
         <h3>La graisse</h3>
         <img
           id="img10"
@@ -264,15 +265,16 @@
       </section>
     </article>
     <article>
-      <h2>Bien utiliser les polices, quelques conseils</h2>
+      <h2 class="titleh2">Bien utiliser les polices, quelques conseils</h2>
       <img
+        class="imgart"
         id="img10a"
         src="http://coreight.com/sites/default/files/polices-dessin.jpg"
         alt="Une fille qui dessine des polices"
         title="Une fille qui dessine des polices"
       />
 
-      <section>
+      <section class="sec1">
         <h3>Ne pas mélanger trop de polices différentes</h3>
         <img
           id="img11"
@@ -303,7 +305,7 @@
         <p>Donc avec 2-3 polices différentes, tu devrais t'en sortir.</p>
       </section>
 
-      <section>
+      <section class="sec2">
         <h3>Les combinaisons de polices</h3>
         <img
           id="img12"
@@ -343,7 +345,7 @@
           >)
         </p>
       </section>
-      <section>
+      <section class="sec3">
         <h3>Modifier les polices ?</h3>
         <img
           id="img13"
@@ -358,7 +360,7 @@
         </p>
       </section>
 
-      <section>
+      <section class="sec4">
         <h3>La mise en forme des paragraphes</h3>
         <img
           id="img14"
@@ -407,7 +409,7 @@
         </p>
       </section>
 
-      <section>
+      <section class="sec5">
         <h3>Attention aux espaces et à la ponctuation !</h3>
         <p>
           Voilà bien un truc qui m'énerve, car certains n'ont pas dû apprendre
@@ -430,8 +432,10 @@
         </ul>
       </section>
 
-      <section>
-        <h3>Quelle police sur le web ? L'utilité des web fonts</h3>
+      <section class="sec6">
+        <h3>
+          Quelle police sur le web ? L'utilité des web fonts
+        </h3>
         <img
           id="img15"
           src="http://coreight.com/sites/default/files/web-fonts.jpg"
@@ -472,44 +476,40 @@
           >.
         </p>
       </section>
-
-      <section>
-        <p>
-          Te voilà désormais incollable sur les polices et la typographie, je
-          compléterai sans doute cet article si d'autres choses me viennent...
-          et avec tes commentaires bien entendu.
-        </p>
-
-        <p>Pour en savoir plus sur les polices et la typographie :</p>
-        <ul>
-          <li>
-            <a
-              href="http://www.lifehack.org/articles/technology/how-get-really-good-typography-one-month.html"
-              target="_blank"
-              title="How to Get Really Good at Typography in One Month"
-              >How to Get Really Good at Typography in One Month</a
-            >
-          </li>
-          <li>
-            <a
-              href="http://www.texteur.net/accueil.html"
-              target="_blank"
-              title="Du bon usage de la typographie sur la toile"
-              >Du bon usage de la typographie sur la toile</a
-            >
-          </li>
-          <li>
-            <a
-              href="http://www.alsacreations.com/article/lire/631-quelles-polices-pour-un-site-web.html"
-              target="_blank"
-              title="Quelles polices de caractères (fontes) utiliser sur le Web ?"
-              >Quelles polices de caractères (fontes) utiliser sur le Web ?</a
-            >
-          </li>
-        </ul>
-      </section>
     </article>
+    <p>
+      Te voilà désormais incollable sur les polices et la typographie, je
+      compléterai sans doute cet article si d'autres choses me viennent... et
+      avec tes commentaires bien entendu.
+    </p>
 
+    <p>Pour en savoir plus sur les polices et la typographie :</p>
+    <ul>
+      <li>
+        <a
+          href="http://www.lifehack.org/articles/technology/how-get-really-good-typography-one-month.html"
+          target="_blank"
+          title="How to Get Really Good at Typography in One Month"
+          >How to Get Really Good at Typography in One Month</a
+        >
+      </li>
+      <li>
+        <a
+          href="http://www.texteur.net/accueil.html"
+          target="_blank"
+          title="Du bon usage de la typographie sur la toile"
+          >Du bon usage de la typographie sur la toile</a
+        >
+      </li>
+      <li>
+        <a
+          href="http://www.alsacreations.com/article/lire/631-quelles-polices-pour-un-site-web.html"
+          target="_blank"
+          title="Quelles polices de caractères (fontes) utiliser sur le Web ?"
+          >Quelles polices de caractères (fontes) utiliser sur le Web ?</a
+        >
+      </li>
+    </ul>
     <footer>
       <p>
         source:
