--- a/html/bonus2.html
+++ b/html/bonus2.html
@@ -513,7 +513,11 @@
     <footer>
       <p>
         source:
-        <a href=" https://coreight.com/content/guide-polices-typographie">
+        <a
+          href=" https://coreight.com/content/guide-polices-typographie"
+          target="_blank"
+          title="article sur guide-polices-typographie"
+        >
           guide-polices-typographie
         </a>
       </p>
