--- a/html/bonus2.html
+++ b/html/bonus2.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Amaury Henrottay" />
+    <meta
+      name="description"
+      content="Article sur les différentes polices et leurs utilisations"
+    />
     <title>Petit Guide de typographie</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/bonus2.css" />
+    <link rel="icon" href="../img/rocket - 24px.png" />
   </head>
   <body>
     <h1>Petit guide des polices et de la typographie</h1>
