--- a/html/bonus1.html
+++ b/html/bonus1.html
@@ -15,6 +15,7 @@
     <title>8 façons simples d’améliorer la typographie dans vos designs</title>
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/bonus1.css" />
+    <link rel="icon" href="../img/rocket - 24px.png" />
   </head>
   <body>
     <h1>
